RESULTS/AutoSpec/raw_results/out-4o-oopsla/028_0004/028_merged.txt
/home/yangfp/AutoSpec/AutoSpec/out/028_0004/028_merged.c:37:3: error: unterminated comment
   37 |   /*@;
      |   ^
